@@ -38,7 +38,6 @@
 #ifndef _GLIBCXX_PARALLEL_BASE_H
 #define _GLIBCXX_PARALLEL_BASE_H 1
 
-#include <cstdio>
 #include <functional>
 #include <omp.h>
 #include <parallel/features.h>
@@ -471,24 +470,7 @@ template<typename RandomAccessIterator, typename Comparator>
       }
   }
 
-// Avoid the use of assert, because we're trying to keep the <cassert>
-// include out of the mix. (Same as debug mode).
-inline void
-__replacement_assert(const char* __file, int __line,
-                     const char* __function, const char* __condition)
-{
-  std::printf("%s:%d: %s: Assertion '%s' failed.\n", __file, __line,
-              __function, __condition);
-  __builtin_abort();
-}
-
-#define _GLIBCXX_PARALLEL_ASSERT(_Condition)                            \
-do 								        \
-  {									\
-    if (!(_Condition))						   	\
-      __gnu_parallel::__replacement_assert(__FILE__, __LINE__,		\
-                                  __PRETTY_FUNCTION__, #_Condition);	\
-  } while (false)
+#define _GLIBCXX_PARALLEL_ASSERT(_Condition) __glibcxx_assert(_Condition)
 
 } //namespace __gnu_parallel
 
